@@ -6,7 +6,9 @@ ADD target/jersey-netty-app-1.0-SNAPSHOT.jar /opt/app/jersey-netty-app-1.0-SNAPS
 ADD target/dependency /opt/app/dependency
 # Set the command to run the application, note the use of the wildcard for
 # all dependent jars
+# Include experimental flag to obey cgroup memory limits for the heap
 CMD java \
+  -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap \
   -cp /opt/app/jersey-netty-app-1.0-SNAPSHOT.jar:/opt/app/dependency/* \
   app.App
 
